--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,20 @@
 @import "Reset";
 @import "variables";
 
+.container{
+	padding: 0px;
+
+}
+
+.navbar{
+	min-height: 50px;
+	margin-bottom: 0px;
+	border: none;
+	background-color: white;
+
+	.navbar-brand{
+		a{
+			padding: 0px 0px 0px 0px;
+		}
+	}
+}
