--- a/css/style.css
+++ b/css/style.css
@@ -86,4 +86,15 @@ hr {
 input, select {
   vertical-align: middle; }
 
+.container {
+  padding: 0px; }
+
+.navbar {
+  min-height: 50px;
+  margin-bottom: 0px;
+  border: none;
+  background-color: white; }
+  .navbar .navbar-brand a {
+    padding: 0px 0px 0px 0px; }
+
 /*# sourceMappingURL=style.css.map */
