--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,5 @@
 $fuente_ppal: 'Open Sans', sans-serif;
 $fuente-h1: 'Pacifico', cursive;
 $color-fuente-texto: #777;
+$back-color: #f9f9f9;
+$back-button: #31aae2;
