--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,26 +1,27 @@
 @import "Reset";
 @import "variables";
+@import "header";
 
 .container{
 	padding: 0px;
 
 }
 
-.navbar{
-	min-height: 60px;
-	margin-bottom: 0px;
-
-	a{
-		font-family: $fuente-ppal;
-		font-size: 12px;
-		padding-top: 10px;
-	}
-
-	.navbar-brand{
-		a{
-			padding: 0px 0px 0px 10px;
-		}
-	}
+h2{
+	color: black;
+	font-size: 30px;
+	font-style: bold;
+	margin-top: 100px;
+	margin-bottom: 30px;
+	text-align: center;
+}	
+p{
+	color: $color-fuente-texto;
+	font-size: 13px;
+	line-height: 23px;
+	margin-bottom: 30px;
+	padding: 0px 150px;
+	text-align: center;
 }
 
 .Section_1{
@@ -45,6 +46,7 @@
 		font-family: $fuente-ppal;
 		font-size: 14px;
 		color: $color-fuente-texto;
+		margin-bottom: 0px;
 	}
 
 }
@@ -55,10 +57,10 @@
 	color: black;
     display: inline-block;
 	font-family: $fuente-ppal;
-	font-size: 16px;
+	font-size: 12px;
     margin: 0px 5px;
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 15px 35px;
 	&:hover{
 		background-color: #e777;
 		border: none;
@@ -68,20 +70,49 @@
 	}
 }
 
-.Section_2{
+.Section_Hello{
 	font-family: $fuente-ppal;
-	text-align: center;
-	margin-top: 30px;
-	h2{
-		color: black;
-		font-size: 50px;
-		font-style: bold;
-		margin-bottom: 30px;
-	}	
-	p{
-		color: $color-fuente-texto;
-		font-size: 12px;
-		line-height: 20px;
-		padding: 0px 150px;
+	margin-bottom: 	70px;
+}
+
+.Section-Huge-Demos{
+	background-color: $back-color;
+
+	.thumbnail{
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		background-color: transparent;
+		border: none;
+		padding: 0px;
+		text-align: center;
 	}
+
+	h3{
+		color: black;
+		margin: 15px 0px;
+		font-size: 16px;
+		font-style: bold;
+		text-align: center;
+	}
+
+	p{
+		padding: 0px 40px;
+		margin-bottom: 25px;
+	}
+
+	.btn-default{
+		background-image: none;
+		background-repeat: none;
+		text-shadow: none;
+		border-color: transparent;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		background-color: $back-button;
+		color: white;
+		font-family: $fuente-ppal;
+		font-size: 12px;
+		padding: 10px 35px;
+		border-radius: 0px;
+	}
+
 }
