--- a/css/style.css
+++ b/css/style.css
@@ -205,4 +205,16 @@ p {
     padding: 10px 35px;
     border-radius: 0px; }
 
+.Counter {
+  text-align: center;
+  padding: 50px 50px; }
+  .Counter .progress {
+    height: 100px;
+    width: 100px;
+    border-radius: 50px; }
+  .Counter .progress-bar {
+    height: 50px;
+    width: 50px;
+    border-radius: 50px; }
+
 /*# sourceMappingURL=style.css.map */
