--- a/css/style.css
+++ b/css/style.css
@@ -1,91 +1,3 @@
-/* 
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com 
-Twitter: @rich_clark
-*/
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent; }
-
-body {
-  line-height: 1; }
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-nav ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-a {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent; }
-
-/* change colours to suit your needs */
-ins {
-  background-color: #ff9;
-  color: #000;
-  text-decoration: none; }
-
-/* change colours to suit your needs */
-mark {
-  background-color: #ff9;
-  color: #000;
-  font-style: italic;
-  font-weight: bold; }
-
-del {
-  text-decoration: line-through; }
-
-abbr[title], dfn[title] {
-  border-bottom: 1px dotted;
-  cursor: help; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-/* change border colour to suit your needs */
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #cccccc;
-  margin: 1em 0;
-  padding: 0; }
-
-input, select {
-  vertical-align: middle; }
-
 .navbar {
   border-radius: 0px;
   min-height: 60px;
@@ -112,8 +24,12 @@ input, select {
   background-color: white;
   border-color: white; }
 
+.container-fluid {
+  border: 1px solid magenta; }
+
 .container {
-  padding: 0px; }
+  padding: 0px;
+  border: 1px solid cyan; }
 
 h2 {
   color: black;
@@ -131,12 +47,12 @@ p {
   padding: 0px 150px;
   text-align: center; }
 
-.Section_1 {
+#Section_1 {
   background-image: url("../imgs/Body/Slide_Top.png");
   background-repeat: none;
   height: 750px;
   text-align: center; }
-  .Section_1 .jumbotron {
+  #Section_1 .jumbotron {
     background-color: transparent;
     border-radius: 0px;
     color: inherit;
@@ -146,7 +62,7 @@ p {
     margin-top: 90px;
     padding-top: 0px;
     padding-bottom: 0px; }
-  .Section_1 p {
+  #Section_1 p {
     font-family: "Open Sans", sans-serif;
     font-size: 14px;
     color: #777;
@@ -169,29 +85,29 @@ p {
     font-style: bold;
     text-decoration: none; }
 
-.Section_Hello {
+#Section_Hello {
   font-family: "Open Sans", sans-serif;
   margin-bottom: 70px; }
 
-.Section-Huge-Demos {
+#Section-Huge-Demos {
   background-color: #f9f9f9; }
-  .Section-Huge-Demos .thumbnail {
+  #Section-Huge-Demos .thumbnail {
     -webkit-box-shadow: none;
     box-shadow: none;
     background-color: transparent;
     border: none;
     padding: 0px;
     text-align: center; }
-  .Section-Huge-Demos h3 {
+  #Section-Huge-Demos h3 {
     color: black;
     margin: 15px 0px;
     font-size: 16px;
     font-style: bold;
     text-align: center; }
-  .Section-Huge-Demos p {
+  #Section-Huge-Demos p {
     padding: 0px 40px;
     margin-bottom: 25px; }
-  .Section-Huge-Demos .btn-default {
+  #Section-Huge-Demos .btn-default {
     background-image: none;
     background-repeat: none;
     text-shadow: none;
@@ -205,16 +121,118 @@ p {
     padding: 10px 35px;
     border-radius: 0px; }
 
-.Counter {
-  text-align: center;
-  padding: 50px 50px; }
-  .Counter .progress {
-    height: 100px;
-    width: 100px;
-    border-radius: 50px; }
-  .Counter .progress-bar {
-    height: 50px;
-    width: 50px;
-    border-radius: 50px; }
+#Counter {
+  /*
+  * react-circular-progressbar styles
+  *
+  * All of the styles in this file are optional and configurable!
+  */
+  margin: 50px;
+  text-align: center; }
+  #Counter h5 {
+    color: #777;
+    font-family: "Open Sans", sans-serif;
+    margin-top: 50px; }
+  #Counter p {
+    color: #777;
+    font-family: "Open Sans", sans-serif;
+    font-size: 12px;
+    line-height: 16px;
+    margin: 10px 0px;
+    padding: 0px; }
+  #Counter .student-progress-TOT__data__right {
+    position: relative; }
+  #Counter .circular__progress,
+  #Counter .circular-star {
+    width: 100%;
+    height: 100%;
+    margin: 50px auto 0; }
+  #Counter .circular__progress__heading {
+    color: blue;
+    margin-top: 8px; }
+  #Counter .circular__progress__bar {
+    fill: white;
+    width: 140px;
+    height: 140px; }
+    #Counter .circular__progress__bar__path {
+      stroke: blue;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+      transition: stroke-dashoffset 0.5s ease 0s; }
+    #Counter .circular__progress__bar__trail {
+      stroke: moonlight; }
+    #Counter .circular__progress__bar__text {
+      fill: #777;
+      font-size: 20px;
+      dominant-baseline: middle;
+      text-anchor: middle; }
+    #Counter .circular__progress__bar--background {
+      fill: gray; }
+  #Counter .circular__progress-inverted .circular__progress__bar--background {
+    fill: blue; }
+  #Counter .circular__progress-inverted .circular__progress__bar__text {
+    fill: white; }
+  #Counter .circular__progress-inverted .circular__progress__bar__path {
+    stroke: white; }
+  #Counter .circular__progress-inverted .circular__progress__bar__trail {
+    stroke: transparent; }
+  #Counter .innercircle__text {
+    font-size: 1rem;
+    color: #6a7070;
+    top: 47px;
+    font-weight: bold;
+    padding-right: 36px;
+    text-align: right; }
+  #Counter .innercircle .circular__progress__bar {
+    width: 81px;
+    height: 81px;
+    margin-right: 12px; }
+  #Counter .innercircle .circular__progress__bar__trail {
+    stroke: #f5f5f5; }
+  #Counter .innercircle .circular__progress__bar.bordercircle .circular__progress__bar__path {
+    stroke: #cdcdcd; }
+  #Counter .circular__progress__bar__path {
+    stroke: #047a9c;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    transition: stroke-dashoffset 0.5s ease 0s; }
+  #Counter .innercircle .circular__progress__bar.gredientcircle {
+    position: absolute;
+    right: 1px;
+    top: 0;
+    width: 5.679em; }
+  #Counter .innercircle .circular__progress__bar {
+    width: 81px;
+    height: 81px;
+    margin-right: 12px; }
+  #Counter .innercircle .circular__progress__bar line {
+    stroke: #c7c7c7;
+    stroke-width: 1; }
+  #Counter .circular__progress__bar__path {
+    stroke: #047a9c;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    transition: stroke-dashoffset 0.5s ease 0s; }
+  #Counter .innercircle .circular__progress__bar.gredientcircle .circular__progress__bar__path {
+    stroke: url(#pattern); }
+  #Counter text {
+    font-family: "Open Sans", sans-serif;
+    color: #777; }
+
+#Portfolio {
+  background-color: #f9f9f9;
+  height: 540px; }
+  #Portfolio h2 {
+    margin: 50px; }
+    #Portfolio h2::after {
+      content: "";
+      display: block;
+      height: 10px;
+      width: 10px;
+      background: #31aae2;
+      transform: rotate(45deg);
+      position: relative;
+      top: 10px;
+      margin: auto; }
 
 /*# sourceMappingURL=style.css.map */
