--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,14 @@
-@import "Reset";
+//@import "Reset";
 @import "variables";
 @import "header";
 
+.container-fluid{
+	border: 1px solid magenta;
+}
+
 .container{
 	padding: 0px;
-
+	border: 1px solid cyan;
 }
 
 h2{
@@ -24,7 +28,7 @@ p{
 	text-align: center;
 }
 
-.Section_1{
+#Section_1{
 	background-image: url("../imgs/Body/Slide_Top.png");
 	background-repeat: none;
 	height: 750px;
@@ -70,12 +74,12 @@ p{
 	}
 }
 
-.Section_Hello{
+#Section_Hello{
 	font-family: $fuente-ppal;
 	margin-bottom: 	70px;
 }
 
-.Section-Huge-Demos{
+#Section-Huge-Demos{
 	background-color: $back-color;
 
 	.thumbnail{
@@ -117,18 +121,168 @@ p{
 
 }
 
-.Counter{
-	text-align: center;
-	padding: 50px 50px;	
-	.progress{
-		height: 100px;
-		width: 100px;
-		border-radius: 50px;
+#Counter{
+	/*
+	* react-circular-progressbar styles
+	*
+	* All of the styles in this file are optional and configurable!
+	*/
 
+	margin: 50px;
+	text-align: center;
+
+	h5{
+		color: $color-fuente-texto;
+		font-family: $fuente-ppal;
+		margin-top: 50px;
 	}
-	.progress-bar{
-		height: 50px;
-		width: 50px;
-		border-radius: 50px;
+
+	p{
+		color: $color-fuente-texto;
+		font-family: $fuente-ppal;
+		font-size: 12px;
+		line-height: 16px;
+		margin: 10px 0px;
+		padding: 0px;
 	}
+
+	.student-progress-TOT__data__right{
+	  position: relative;
+	}
+	.circular__progress,
+	.circular-star {
+	  width:100%;
+	    height:100%;
+	    margin: 50px auto 0;
+	}
+
+	.circular__progress {
+	    &__heading {
+	        color: blue;
+	        margin-top: 8px;
+	        
+	    }
+	    &__bar {
+	        fill: white;
+	        width: 140px;
+	        height: 140px;
+	        &__path {
+	            stroke: blue;
+	            stroke-linecap: round;
+	            stroke-linejoin: round;
+	            transition: stroke-dashoffset 0.5s ease 0s;
+	        }
+	        &__trail {
+	            stroke: moonlight;
+	        }
+	        &__text {
+	            fill: $color-fuente-texto;
+	            font-size: 20px;
+	            dominant-baseline: middle;
+	            text-anchor: middle;
+	        }
+	        &--background {
+	            fill: gray
+	        }
+	    }
+	    &-inverted {
+	        .circular__progress__bar {
+	            &--background {
+	                fill: blue;
+	            }
+	            &__text {
+	                fill: white;
+	            }
+	            &__path {
+	                stroke: white;
+	            }
+	            &__trail {
+	                stroke: transparent;
+	            }
+	        }
+	    }
+	}
+
+	.innercircle__text {
+	    font-size: 1rem;
+	    color: #6a7070;
+	    top: 47px;
+	    font-weight: bold;
+	    padding-right: 36px;
+	    text-align: right;
+	}
+
+	.innercircle .circular__progress__bar {
+	    width: 81px;
+	    height: 81px;
+	    margin-right: 12px;
+	}
+	.innercircle .circular__progress__bar__trail {
+	    stroke: #f5f5f5;
+	}
+
+	.innercircle .circular__progress__bar.bordercircle .circular__progress__bar__path {
+	    stroke: #cdcdcd;
+	}
+
+	.circular__progress__bar__path {
+	    stroke: #047a9c;
+	    stroke-linecap: round;
+	    stroke-linejoin: round;
+	    transition: stroke-dashoffset 0.5s ease 0s;
+	}
+
+	.innercircle .circular__progress__bar.gredientcircle {
+	    position: absolute;
+	    right: 1px;
+	    top: 0;
+	    width: 5.679em;
+	}
+	.innercircle .circular__progress__bar {
+	    width: 81px;
+	    height: 81px;
+	    margin-right: 12px;
+	}
+
+	.innercircle .circular__progress__bar line {
+	    stroke: #c7c7c7;
+	    stroke-width: 1;
+	}
+
+	.circular__progress__bar__path {
+	    stroke: #047a9c;
+	    stroke-linecap: round;
+	    stroke-linejoin: round;
+	    transition: stroke-dashoffset 0.5s ease 0s;
+	}
+
+	.innercircle .circular__progress__bar.gredientcircle .circular__progress__bar__path {
+	    stroke: url(#pattern);
+	}
+
+	text{
+		font-family: $fuente-ppal;
+		color: $color-fuente-texto;
+	}
+}
+
+#Portfolio{
+	background-color: $back-color;
+	height: 540px;
+
+	h2{
+		margin: 50px;
+		&::after{
+		    content: "";
+    		display: block;
+		    height: 10px;
+		    width: 10px;
+		    background: #31aae2;
+		    transform: rotate(45deg);
+		    position: relative;
+		    top: 10px;
+		    margin: auto;
+		}
+	}
+
 }
